Add download_file functions

--- a/docs/examples/earthnet2021.ipynb
+++ b/docs/examples/earthnet2021.ipynb
@@ -2,24 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "# Weather-guided Earth Surface Forecasting with Eathformer on EarthNet2021"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "[![Open In Studio Lab](https://studiolab.sagemaker.aws/studiolab.svg)](https://studiolab.sagemaker.aws/import/github/opengeos/earthformer/blob/main/docs/examples/earthnet2021.ipynb) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/opengeos/earthformer/blob/main/docs/examples/earthnet2021.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "The notebook is adapted from the original Earthformer repo [here](https://github.com/amazon-science/earth-forecasting-transformer/blob/main/scripts/cuboid_transformer/earthnet_w_meso/inference_tutorial_earthformer_earthnet2021.ipynb). Credits to the original authors.\n",
     "\n",
@@ -31,16 +28,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "## Load and Visualize EarthNet2021"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "For the purpose of demonstration, we download a small subset of the IID-test split of EarthNet2021."
    ]
@@ -87,7 +82,7 @@
    "outputs": [],
    "source": [
     "url = 'https://owncloud.gwdg.de/index.php/s/yHwDqblRPdFnEym/download'\n",
-    "leafmap.download_file(url, 'datasets/earthnet2021/iid_000.tar.gz')"
+    "earthformer.download_file(url, 'datasets/earthnet2021/iid_000.tar.gz')"
    ]
   },
   {
@@ -139,8 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "Each sample in the dataset contains four components:\n",
     "\n",
@@ -214,16 +208,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "You may notice that some frames are blank. This is because EarthNet2021 contains a \"data quality mask\" that indicates noise in the data. Earth observations are usually very noisy (due to factors like cloud or observational errors). We simply display the noisy pixels with the black value, and have masked them from the loss functions when training the neural network."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "Following is the NDVI index calculated via the formula: $NDVI=\\frac{I_{\\text{NIR}} - I_{\\text{red}}}{I_{\\text{NIR}} + I_{\\text{red}}}$. It quantifies vegetation by measuring the difference between near-infrared (which vegetation strongly reflects) and red light (which vegetation absorbs). See the following image from NASA for an illustration of NDVI:\n",
     "\n",
@@ -255,16 +247,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "## Brief Introduction of Earthformer"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "Conventionally, Earth system (e.g., weather and climate) forecasting relies on numerical simulation with complex physical models and are hence both expensive in computation and demanding on domain expertise. With the explosive growth of the spatiotemporal Earth observation data in the past decade, data-driven models that apply Deep Learning (DL) are demonstrating impressive potential for various Earth system forecasting tasks. The Transformer as an emerging DL architecture, despite its broad success in other domains, has limited adoption in this area. In this paper, we propose Earthformer, a space-time Transformer for Earth system forecasting. Earthformer is based on a generic, flexible and efficient space-time attention block, named Cuboid Attention. The idea is to decompose the data into cuboids and apply cuboid-level self-attention in parallel. These cuboids are further connected with a collection of global vectors.\n",
     "\n",
@@ -278,16 +268,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "## Load Pretrained Earthformer"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "We load the Earthformer pretrained on the training set of EarthNet2021. The model is current **rank-1** in [EarthNet2021 leaderboard](https://www.earthnet.tech/docs/ch-leaderboard/)."
    ]
@@ -395,16 +383,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "You can see that the predictions are close to the ground-truth. In addition, the original dataset contain observational noises and some of the target frames are blank. However, Earthformer is able to give reasonable predictions."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-   },
+   "metadata": {},
    "source": [
     "## More Details\n",
     "\n",
